--- a/index.pug
+++ b/index.pug
@@ -5,8 +5,10 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="reset.css")
         link(rel="stylesheet", href="style.css")
+        link(rel="shortcut icon", href="/img/fav_broccoli.ico", type="image/x-icon")
         title Organic
 
     body 
         .container 
-            h1 HELLO THERE!
+            header 
+                h1 HELLO THERE!
