--- a/index.pug
+++ b/index.pug
@@ -10,5 +10,20 @@ html(lang="en")
 
     body 
         .container 
-            header 
-                h1 HELLO THERE!
+            header.header 
+                .header_logo-wrapper 
+                    h1.logo HELLO THERE!
+                nav.header_nav 
+                    ul 
+                        //-  li*5>a
+                        li
+                            a(href="") 
+                        li
+                            a(href="") 
+                        li
+                            a(href="") 
+                        li
+                            a(href="") 
+                        li
+                            a(href="") 
+                      
