--- a/index.pug
+++ b/index.pug
@@ -17,13 +17,13 @@ html(lang="en")
                     ul 
                         //-  li*5>a
                         li
-                            a(href="") 
+                            a(href="#!") HOME   
                         li
-                            a(href="") 
+                            a(href="#!") ABOUT
                         li
-                            a(href="") 
+                            a(href="#!") PRODUCTS
                         li
-                            a(href="") 
+                            a(href="#!") LOCATION
                         li
-                            a(href="") 
-                      
+                            a(href="#!") CONTACT
+                    
