--- a/style.css
+++ b/style.css
@@ -17,3 +17,19 @@ font-family: "Roboto", sans-serif; для лого
   max-width: 1920px;
   margin: 0 auto;
 }
+
+/* HEADER */
+/* HEADER */
+/* HEADER */
+
+
+
+.header {}
+
+.header_logo-wrapper {}
+
+.logo {}
+
+.header_nav {}
+
+.search {}
