--- a/index.pug
+++ b/index.pug
@@ -12,6 +12,7 @@ html(lang="en")
         .container 
             header.header 
                 .header_logo-wrapper 
+                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi animi est quos veniam consectetur, repellendus ipsam sapiente vel veritatis hic?
                     h1.logo HELLO THERE!
                 nav.header_nav 
                     ul 
