justify-items: start

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ font-family: "Roboto", sans-serif; для лого
   grid-template-columns: 3fr 2fr 1fr;
   grid-template-areas: 'logo nav search'; */
   grid-template: "logo nav search" max-content / 3fr 2fr 1fr;
+  align-items: center;
+  justify-items: start;
 }
 
 .header_logo-wrapper {
