--- a/index.pug
+++ b/index.pug
@@ -11,8 +11,8 @@ html(lang="en")
     body 
         .container 
             header.header 
-                .header_logo-wrapper 
-                    h1.logo HELLO THERE!
+                
+                h1.logo HELLO THERE! INC.
                 nav.header_nav 
                     ul 
                         //-  li*5>a
