--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ font-family: "Roboto", sans-serif; для лого
 .header_nav a {
   padding: 10px;
   transition: color 0.3s, font-weight 0.3s;
-  ;
-
+  position: relative;
+  display: inline-block;
 }
 
 .header_nav a:hover {
@@ -80,10 +80,14 @@ font-family: "Roboto", sans-serif; для лого
 
 .header_nav a:after {
   content: '';
+  display: block;
   width: 100%;
   height: 100%;
-  background: rgb(50, 84, 85);
-  ;
+  background: cadetblue;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
 }
 
 .search {
