--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ font-family: "Roboto", sans-serif; для лого
  */
 
 * {
-  background-color: rgb(251, 255, 254);
+  /* background-color: rgb(251, 255, 254); */
   font-family: "PT Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -32,6 +32,7 @@ font-family: "Roboto", sans-serif; для лого
   justify-items: start;
   padding: 20px 0;
   text-transform: uppercase;
+  background-color: sandybrown;
 }
 
 /* .header_logo-wrapper {
@@ -54,7 +55,7 @@ font-family: "Roboto", sans-serif; для лого
 
 .header_nav {
   grid-area: nav;
-  background-color: blue;
+  /* background-color: blue; */
 }
 
 .header_nav ul {
@@ -82,15 +83,23 @@ font-family: "Roboto", sans-serif; для лого
   content: '';
   display: block;
   width: 100%;
-  height: 100%;
+  height: 20%;
   background: cadetblue;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -100%;
 
+}
+
+.header_nav a:hover:after {
+  bottom: 0;
+}
+
+.header_nav a:active:after {
+  background-color: rgb(50, 84, 85);
 }
 
 .search {
   grid-area: search;
-  background-color: salmon;
+  /* background-color: salmon; */
 }
