--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ font-family: "Roboto", sans-serif; для лого
   justify-items: start;
   padding: 20px 0;
   text-transform: uppercase;
-  background-color: sandybrown;
+  overflow: hidden;
 }
 
 /* .header_logo-wrapper {
@@ -88,8 +88,7 @@ font-family: "Roboto", sans-serif; для лого
   position: absolute;
   left: 0;
   bottom: -100%;
-  transition: bottom 0.3s, background-color 0.2s;
-
+  transition: bottom 0.4s, background-color 0.2s;
 }
 
 .header_nav a:hover:after {
