--- a/index.pug
+++ b/index.pug
@@ -27,7 +27,7 @@ html(lang="en")
                         li
                             a(href="#!") CONTACT
                 button.search 
-                    svg(width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg")
+                    svg.search_icon(width="35" height="35" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg")
                         path(
                             fill-rule="evenodd"
                             clip-rule="evenodd"
