--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ font-family: "Roboto", sans-serif; для лого
   font-weight: bold;
 }
 
+.logo:hover {
+  cursor: cell;
+}
+
 .header_nav a:active {
   color: rgb(50, 84, 85);
 }
