.slider-arrows_item

--- a/index.pug
+++ b/index.pug
@@ -39,4 +39,6 @@ html(lang="en")
                         )
             main.main 
                 .slider-arrows 
-                
+                    .slider-arrows_items-wrapper 
+                        img.slider-arrows_item(src="img/arrow.png", alt="", srcset="")
+
