--- a/index.pug
+++ b/index.pug
@@ -41,4 +41,6 @@ html(lang="en")
                 .slider-arrows 
                     .slider-arrows_items-wrapper 
                         img.slider-arrows_item(src="img/arrow.png", alt="", srcset="")
+                    .slider-arrows_nav 
+                        button.slider-arrows_arrow.slider-arrows_arrow--left <
 
