--- a/index.pug
+++ b/index.pug
@@ -43,4 +43,6 @@ html(lang="en")
                         img.slider-arrows_item(src="img/arrow.png", alt="", srcset="")
                     .slider-arrows_nav 
                         button.slider-arrows_arrow.slider-arrows_arrow--left <
+                        button.btn.slider-arrows_btn start drinking
+                        button.slider-arrows_arrow.slider-arrows_arrow--right >
 
