--- a/style.css
+++ b/style.css
@@ -118,12 +118,16 @@ font-family: "Roboto", sans-serif; для лого
 
 .main {
   display: grid;
-  grid-template-rows: 3fr 1fr 3fr;
+  /* grid-template-rows: 3fr 1fr 3fr;
   grid-template-columns: 2fr 1fr 1.5fr 1.5fr;
   grid-template-areas:
     "slider-arrows healthy thirsty thirsty"
     "slider-arrows healthy slider-dots orange"
-    "freshy healthy slider-dots orange";
+    "freshy healthy slider-dots orange"; */
+  grid-template:
+    "slider-arrows healthy thirsty thirsty" 3fr
+    "slider-arrows healthy slider-dots orange" 1fr
+    "freshy healthy slider-dots orange" 3fr / 2fr 1fr 1.5fr 1.5fr;
 }
 
 .slider-arrows {
