--- a/style.css
+++ b/style.css
@@ -116,8 +116,8 @@ font-family: "Roboto", sans-serif; для лого
 /* main */
 
 .main {
-  display: grid;
-  /* grid-template-rows: 3fr 1fr 3fr;
+  /* display: grid;
+  grid-template-rows: 3fr 1fr 3fr;
   grid-template-columns: 2fr 1fr 1.5fr 1.5fr;
   grid-template-areas:
     "slider-arrows healthy thirsty thirsty"
@@ -129,29 +129,20 @@ font-family: "Roboto", sans-serif; для лого
     "freshy healthy slider-dots orange" 3fr / 2fr 1fr 1.5fr 1.5fr;
 }
 
-.slider-arrows {
-}
+.slider-arrows {}
 
-.slider-arrows_items-wrapper {
-}
+.slider-arrows_items-wrapper {}
 
-.slider-arrows_item {
-}
+.slider-arrows_item {}
 
-.slider-arrows_nav {
-}
+.slider-arrows_nav {}
 
-.slider-arrows_arrow {
-}
+.slider-arrows_arrow {}
 
-.slider-arrows_arrow--left {
-}
+.slider-arrows_arrow--left {}
 
-.btn {
-}
+.btn {}
 
-.slider-arrows_btn {
-}
+.slider-arrows_btn {}
 
-.slider-arrows_arrow--right {
-}
+.slider-arrows_arrow--right {}
