--- a/style.css
+++ b/style.css
@@ -116,13 +116,13 @@ font-family: "Roboto", sans-serif; для лого
 /* main */
 
 .main {
-  /* display: grid;
-  grid-template-rows: 3fr 1fr 3fr;
+  display: grid;
+  /* grid-template-rows: 3fr 1fr 3fr;
   grid-template-columns: 2fr 1fr 1.5fr 1.5fr;
   grid-template-areas:
     "slider-arrows healthy thirsty thirsty"
     "slider-arrows healthy slider-dots orange"
-    "freshy healthy slider-dots orange"; */
+    "freshy healthy slider-dots orange";  */
   grid-template:
     "slider-arrows healthy thirsty thirsty" 3fr
     "slider-arrows healthy slider-dots orange" 1fr
