--- a/style.css
+++ b/style.css
@@ -129,7 +129,9 @@ font-family: "Roboto", sans-serif; для лого
     "freshy healthy slider-dots orange" 3fr / 2fr 1fr 1.5fr 1.5fr;
 }
 
-.slider-arrows {}
+.slider-arrows {
+  grid-area: slider-arrows;
+}
 
 .slider-arrows_items-wrapper {}
 
