--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ font-family: "Roboto", sans-serif; для лого
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
