--- a/style.css
+++ b/style.css
@@ -138,6 +138,9 @@ font-family: "Roboto", sans-serif; для лого
 
 .slider-arrows_items-wrapper {
   filter: brightness(90%);
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .slider-arrows_item {}
