--- a/index.pug
+++ b/index.pug
@@ -45,4 +45,14 @@ html(lang="en")
                         button.slider-arrows_arrow.slider-arrows_arrow--left <
                         button.btn.slider-arrows_btn start drinking
                         button.slider-arrows_arrow.slider-arrows_arrow--right >
+                .slider-dots
+                    .slider-dots_items-wrapper 
+                        img.slider-dots_item(src="img/carrots.jpg", alt="", srcset="")
+                    .slider-dots_btn-wrapper 
+                        button.btn.slider-dots_btn start drinking
+                    .slider-dots_nav 
+                        .slider_dots_item 1
+                        .slider_dots_item 2
+                        .slider_dots_item 3
+
 
