--- a/index.pug
+++ b/index.pug
@@ -51,8 +51,8 @@ html(lang="en")
                     .slider-dots_btn-wrapper 
                         button.btn.slider-dots_btn start drinking
                     .slider-dots_nav 
-                        .slider-dots_nav-item 1
-                        .slider-dots_nav-item.slider-dots_nav-item--active 2
-                        .slider-dots_nav-item 3
+                        .slider-dots_nav-item 
+                        .slider-dots_nav-item.slider-dots_nav-item--active 
+                        .slider-dots_nav-item 
 
 
