article.freshy.common

--- a/index.pug
+++ b/index.pug
@@ -54,5 +54,15 @@ html(lang="en")
                         button.slider-dots_nav-item 
                         button.slider-dots_nav-item.slider-dots_nav-item--active 
                         button.slider-dots_nav-item 
+                article.freshy.common 
+                    h2.title go green and stay 
+                     span freshy 
+                    .common__desc 
+                        p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            i Aspernatur, 
+                            |cum magni soluta 
+                            u enim corrupti 
+                            |consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, odio?
+
 
 
