--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ font-family: "Roboto", sans-serif; для лого
     "slider-arrows healthy slider-dots orange" 1fr
     "freshy healthy slider-dots orange" 3fr / 2fr 1fr 1.5fr 1.5fr;
 }
+
 /* arrows
 arrows
 arrows */
@@ -163,8 +164,7 @@ arrows */
   display: flex;
 }
 
-.slider-arrows_item {
-}
+.slider-arrows_item {}
 
 .slider-arrows_nav {
   position: absolute;
@@ -190,18 +190,16 @@ arrows */
 .slider-arrows_arrow:hover {
   opacity: 0.8;
 }
+
 .slider-arrows_arrow:active {
   opacity: 0.6;
 }
 
-.slider-arrows_arrow--left {
-}
+.slider-arrows_arrow--left {}
 
-.slider-arrows_btn {
-}
+.slider-arrows_btn {}
 
-.slider-arrows_arrow--right {
-}
+.slider-arrows_arrow--right {}
 
 /* dots
 dots
@@ -212,14 +210,16 @@ dots */
   position: relative;
   max-width: fit-content;
 }
+
 .slider-dots_items-wrapper {
   filter: brightness(90%);
   width: 100%;
   height: 100%;
   display: flex;
 }
-.slider-dots_item {
-}
+
+.slider-dots_item {}
+
 .slider-dots_btn-wrapper {
   position: absolute;
   top: 50%;
@@ -230,8 +230,9 @@ dots */
   justify-content: center;
   /* align-items: center; */
 }
-.btn {
-}
+
+.btn {}
+
 .slider-dots_btn {
   /* position: absolute;
   top: 50%;
@@ -240,6 +241,7 @@ dots */
   display: flex;
   justify-content: center; */
 }
+
 .slider-dots_nav {
   width: 100%;
   position: absolute;
@@ -249,6 +251,7 @@ dots */
   align-items: center;
   gap: 15px;
 }
+
 .slider-dots_nav-item {
   width: 25px;
   height: 20px;
@@ -265,6 +268,7 @@ dots */
 .slider-dots_nav-item:active {
   opacity: 0.7;
 }
+
 .slider-dots_nav-item--active {
   background: transparent;
   border: 1px solid white;
