--- a/style.css
+++ b/style.css
@@ -273,3 +273,16 @@ dots */
   background: transparent;
   border: 1px solid white;
 }
+
+/* 
+FRESHY
+FRESHY
+FRESHY */
+
+.freshy {}
+
+.common {}
+
+.title {}
+
+.common__desc {}
