--- a/style.css
+++ b/style.css
@@ -284,8 +284,18 @@ FRESHY */
   background-color: rgba(196, 232, 108, 1);
 }
 
-.common {}
+.common {
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 30px;
+}
 
 .title {}
 
-.common__desc {}
+.common__desc {
+  max-width: 60%;
+  hyphens: auto;
+}
