--- a/index.pug
+++ b/index.pug
@@ -56,13 +56,15 @@ html(lang="en")
                         button.slider-dots_nav-item 
                 article.freshy.common 
                     h2.title go green and stay 
-                     span freshy 
+                     span fre&shy;shy 
                     .common__desc 
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
                             |cum magni soluta 
                             u enim corrupti 
                             |consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, odio?
+                section.healthy 
+                section.thirsty 
 
 
 
