--- a/index.pug
+++ b/index.pug
@@ -40,7 +40,8 @@ html(lang="en")
             main.main 
                 .slider-arrows 
                     .slider-arrows_items-wrapper 
-                        img.slider-arrows_item(src="img/green-apples.jpg", alt="", srcset="")
+                        //- img.slider-arrows_item(src="img/green-apples.jpg", alt="", srcset="")
+                        img.slider-arrows_item(src="/img/basket-apples.jpg", alt="", srcset="")
                     .slider-arrows_nav 
                         button.slider-arrows_arrow.slider-arrows_arrow--left <
                         button.btn.slider-arrows_btn start drinking
