--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ font-family: "Roboto", sans-serif; для лого
   padding: 10px 20px;
   font-size: 16px;
   transition: opacity 0.2s;
+  text-shadow: 1px 0px 0 #7a7a7a;
 }
 
 .btn:hover {
