--- a/index.pug
+++ b/index.pug
@@ -61,9 +61,7 @@ html(lang="en")
                     .common__desc 
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
-                            |cum magni soluta 
-                            u enim corrupti 
-                            |consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, odio?
+                            |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
                 section.healthy 
                 section.thirsty 
 
