--- a/index.pug
+++ b/index.pug
@@ -62,8 +62,21 @@ html(lang="en")
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
                             |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
-                section.healthy 
-                section.thirsty 
+                article.healthy.common.common--col-rev
+                    h2.title worry less and drink 
+                     span hel&shy;thy 
+                    .common__desc 
+                        p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            i Aspernatur, 
+                            |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
+                article.thirsty.common 
+                    h2.title go green and stay 
+                     span fre&shy;shy 
+                    .common__desc 
+                        p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            i Aspernatur, 
+                            |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
+
 
 
 
