--- a/index.pug
+++ b/index.pug
@@ -64,11 +64,11 @@ html(lang="en")
                             |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
                 article.healthy.common.common--col-rev
                     h2.title worry less and drink 
-                     span hel&shy;thy 
+                     span hea&shy;lthy 
                     .common__desc 
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
-                            |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
+                            |cum magni nemo, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
                 article.thirsty.common 
                     h2.title go green and stay 
                      span fre&shy;shy 
