--- a/index.pug
+++ b/index.pug
@@ -69,9 +69,9 @@ html(lang="en")
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
                             |cum magni nemo, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
-                article.thirsty.common 
-                    h2.title go green and stay 
-                     span fre&shy;shy 
+                article.thirsty.common.common--row-rev
+                    h2.title are your summer 
+                     span thir&shy;sty?
                     .common__desc 
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
