--- a/style.css
+++ b/style.css
@@ -205,14 +205,14 @@ arrows */
   opacity: 0.6;
 }
 
-.slider-arrows_arrow--left {
+/* .slider-arrows_arrow--left {
 }
 
 .slider-arrows_btn {
 }
 
 .slider-arrows_arrow--right {
-}
+} */
 
 /* dots
 dots
@@ -329,6 +329,7 @@ HEALTHY */
 .healthy {
   grid-area: healthy;
   background-color: rgba(255, 71, 71, 1);
+  padding-bottom: 80px;
 }
 
 .common--col-rev {
