--- a/index.pug
+++ b/index.pug
@@ -76,7 +76,9 @@ html(lang="en")
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
                             |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
-
+                .orange 
+                    .orange-bg
+                        img(src="/img/orange.jpg", alt=" ", srcset="")
 
 
 
