--- a/index.pug
+++ b/index.pug
@@ -79,6 +79,8 @@ html(lang="en")
                 .orange 
                     .orange-bg
                         img(src="/img/orange.jpg", alt=" ", srcset="")
-
+                    .orange__btn-wrapper 
+                        button.btn.orange__btn atart drinking
+                    
 
 
