--- a/index.pug
+++ b/index.pug
@@ -81,6 +81,8 @@ html(lang="en")
                         img(src="/img/orange.jpg", alt=" ", srcset="")
                     .orange__btn-wrapper 
                         button.btn.orange__btn atart drinking
-                    
+                    .orange__nav 
+                        a.orange__arrow(href="#!") 
+                            img(src="/img/arrow.png", alt="", srcset="")
 
 
